global bg to black, global color to white, eliminated horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@
 }
 
 body {
-    background-color: #FFB7FF;
+    background-color: black;
     font-family: monospace;
-    color: #011627;
+    color: white;
     font-size: 16px;
-    border: solid 2px red;
+    line-height: 1.6;
 }
 
 [class ^= "box-"] {
     display: grid;
-    place-items: center;
-    border: solid 2px orangered;
-    border-radius: 20px;
+    border: solid 2px grey;
+    border-radius: 10px;
     box-shadow: 0 0 5px
     rgba(0,0,0,.1);
     max-width: 100vw;
+    grid-gap: 15px 0px;
   }
 
 .container {
@@ -30,10 +30,11 @@ body {
 
 .box-intro {
     text-align: justify;
+
     padding-left: 20px;
     padding-right: 20px;
-    background-color: black;
-    color: white;
+
+    margin-bottom: ;
 }
 
 #logo {
@@ -41,7 +42,13 @@ body {
     text-transform: uppercase;
     word-break: break-word;
     text-align: center;
-    margin-top: 20px;
     border-bottom: solid 4px white;
+    margin-top: 20px;
     margin-bottom: 40px;
+    padding-bottom: 10px;
+    font-size: 20vw;
+}
+
+.box-me, .box-tools, .box-learn {
+    text-align: center;
 }
